fix(button): text align in full width button

--- a/src/button/button.css
+++ b/src/button/button.css
@@ -49,6 +49,12 @@
 
     &_width_available {
         width: 100%;
+
+        .button__text {
+            display: block;
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &_type_link {
